<resources>
    <string name="app_name">VoipCall</string>
    <string name="logging_in">Logging in...</string>
    <string name="outgoing_ok">Outgoing calls allowed</string>
    <string name="incoming_ok">Incoming calls allowed</string>
    <string name="no_outgoing_capability">Unable to make outgoing calls with current capabilities</string>
    <string name="no_incoming_capability">Unable to make incoming calls with current capabilities</string>
    <string name="login_error_fmt">Error logging in: %s</string>
    <string name="login_error_unknown">Unknown error logging in</string>
    <string name="attempting_to_connect">Attempting to connect</string>
    <string name="connected">Connected</string>
    <string name="disconnect_attempt">Attempting to disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="couldnt_establish_outgoing">Couldn\'t establish outgoing call</string>
    <string name="couldnt_establish_outgoing_fmt">Couldn\'t establish outgoing call: %s</string>
    <string name="device_listening">Device is listening for incoming connections</string>
    <string name="device_not_listening">Device is no longer listening for incoming connections</string>
    <string name="device_listening_error_fmt">Device is no longer listening for incoming connections due to error: %s</string>
    <string name="got_incoming">Received incoming connection</string>
    <string name="incoming_disconnected">Pending incoming connection disconnected</string>
    <string name="connection_error_fmt">Connection error: %s</string>
    <string name="connection_error">Connection error</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="incoming_call_message">You have a new incoming call. Answer it?</string>
    <string name="answer">Answer</string>
    <string name="ignore">Ignore</string>
    <string name="speaker_off">Speakerphone off</string>
    <string name="speaker_on">Speakerphone on</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="capability">Update capability</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="client_name">Client Name</string>
    <string name="client_name_text">Client Name</string>
    <string name="input_text">Text</string>
    <string name="input_number">Number</string>
    <string name="outgoing_client">BPOutgoingClient</string>
    <string name="outgoing_number">+14151112233</string>
    <string name="title_activity_incoming_call">IncomingCallActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_address">Home City</string>
    <string name="prompt_description">Short Description</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Resgister</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Related to Register Activity-->
    <string name="login_message">You are log in with</string>
    <string name="title_activity_register">Sign in</string>
    <string name="title_toolbar_register">Register New Account</string>
    <string name="title_activity_login_example">Sign in</string>

    <!-- Related to -Utils-->
    <string name="turn_on_the_internet">There is no internet connection</string>

    <!-- related to making conference room-->
    <string name="waiting_incoming_call">Waiting for the incoming call from server</string>
    <string name="register">REGISTER</string>
    <string name="help">CALL</string>

    <string name="turn_on_samaritan_alert">Please turn on your Samaritan status</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="confirm_info">Confirm Information</string>

    <string name="update_success">Updated info successfully !</string>
    <string name="update_unsuccess">Updated info unsuccessfully !</string>

    <string name="fill_alert">Please fill the fields!</string>
    <string name="making_call">Making Call</string>

    <string name="update_location">Turning on Samaritan, Updating location !</string>
    <string name="update_location_without_turn_on">Updating location !</string>
    <string name="update_location_success">Turned on Samaritan and updated location successfully</string>
    <string name="update_location_unsuccess">Turned on Samaritan and updated location unsuccessfully</string>

    <string name="turn_off_samaritan">Turning off Samaritan</string>
    <string name="turn_off_samaritan_success">Turned off Samaritan successfully</string>
    <string name="turn_off_samaritan_unsuccess">Turned off Samaritan unsuccessfully</string>
    <string name="make_conference_call">Please wait we are setting up a room for you, you will recieve an incoming call soon !</string>
    <string name="make_conference_call_success">The conference room has been set up, please wait for incoming call</string>
    <string name="make_conference_call_unsuccess">Something wrong happened !</string>
    <string name="gsp_setting">GPS is settings</string>
    <string name="gps_message">GPS is not enabled. You have to turn on the location identification</string>
    <string name="setting">Settings</string>
    <string name="gps_cancel">Cancel</string>
    <string name="app_version">\@ 2016 Help Coop v0.2.1</string>
    <string name="not_found">We are sorry about that !</string>
    <string name="found_zero">We could not find any one with radius within 10 miles</string>
    <string name="found_one">We have found 1 person ready to help you</string>
    <string name="found_two">We have found 2 people ready to help you</string>
    <string name="title_activity_show_results">ShowResultsActivity</string>
    <string name="rating">Please wait </string>
    <string name="rate_toast">Please rate for Samaritans </string>


    <!-- Register Activity-->
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="phonenumber_hint">phone number</string>
    <string name="address_hint">home city</string>
    <string name="description_hint">short description</string>
    <string name="title_activity_get_info">GetInfoActivity</string>
    <string name="title_activity_activate">ActivateActivity</string>
    <string name="activate_hint">Enter activate code</string>
    <string name="activate_action">ACTIVATE</string>
    <string name="save_action">Save</string>
    <string name="title_activity_making_call_conference">MakingCallConferenceActivity</string>
    <string name="title_activity_conference_call">ConferenceCallActivity</string>
    <string name="title_activity_rating">RatingActivity</string>

    <string name="request_code">An activation code is being texted to you now to activate and verify your phone. Please enter the activation number in the box <below></below></string>
    <string name="request_code_success">Requested code successfully !</string>
    <string name="request_code_unsuccess">Requested code unsuccessfully !, The phone number is wrong, please enter again</string>
    <string name="updating_info">Please wait for updating information !</string>

    <string name="activate_code">Please wait for verifing the activate code !</string>
    <string name="activate_code_success">Activated code successfully !</string>
    <string name="activate_code_unsuccess">Activated code unsuccessfully, Wrong code, Please enter the code again !</string>


    <string name="request_gcm">Please wait for request code from GCM!</string>
    <string name="activate">Activate</string>
    <!-- Related to Getphonenumber activity-->
    <string name="action_get_phone_short">Done</string>

    <string name="alert_cannot_detect_location">GPS is ON, but we could not detect your location now. Please wait a few seconds and press Retry</string>
    <string name="alert_gsp_settinng">GSP Setting</string>
    <string name="alert_verify_location">Did you turn on Location Indentification</string>
    <string name="alert_location_message">Please turn on your location services so HelpCoop can find your closest helpers</string>
    <string name="alert_location_title">Set GPS On</string>
    <string name="alert_internet_unavalable">Internet Available</string>
    <string name="alert_internet_message">Please turn on the internet</string>
    <string name="alert">Alert</string>
    <string name="alert_ok">OK</string>
    <string name="alert_retry">Retry</string>

    <string name="progress_message_connect_twillio_room">Please wait, We are connecting to conference room !</string>
    <string name="toast_rate_for_samaritan">Please rate for the samaritans</string>
    <string name="toast_finish_the_twillio_call">End of the call, Please rate for the good samaritan</string>
    <string name="alert_connect_success_twillio">Connected successfully !</string>

    <!-- Connect Twillio Activity-->
    <string name="button_rate">Rate</string>
    <string name="button_end_call">End Call</string>

</resources>
